--- a/CashManager/MainWindow.xaml
+++ b/CashManager/MainWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CashManager.ViewModel"
         mc:Ignorable="d"
@@ -119,7 +120,7 @@
     </Window.Resources>-->
 
     <Window.DataContext>
-        <local:PagesViewModel/>
+        <local:CategoryViewModel/>
     </Window.DataContext>
 
 
@@ -909,7 +910,7 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <Grid Background="#FF34AC25">
+                <Grid Background="{Binding ColorAttributeMenu}">
                     <Grid.Triggers>
                         <EventTrigger RoutedEvent="Grid.MouseEnter">
 
@@ -921,7 +922,13 @@
                     </Grid.ColumnDefinitions>
 
 
-                    <TextBlock Text="Profit" VerticalAlignment="Center" FontSize="18" Foreground="#FFFFEFEF" Margin="5,0,0,0"/>
+                    <TextBlock Text="{Binding NameAttributeMenu}" VerticalAlignment="Center" FontSize="18" Foreground="#FFFFEFEF" Margin="5,0,0,0">
+                        <i:Interaction.Triggers>
+                             <i:EventTrigger EventName="MouseLeftButtonUp">
+                                  <i:InvokeCommandAction Command="{Binding ChangeCategory}" />
+                             </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                    </TextBlock>
 
                     <Border Grid.Column="1" HorizontalAlignment="Right" Margin="2" Padding="1" CornerRadius="3,3,3,3" BorderBrush="White" BorderThickness="1" Cursor="Hand">
                         <Border.Triggers>
